--- a/src/main.css
+++ b/src/main.css
@@ -74,4 +74,5 @@ body,
 
 @import './styles/header.css';
 @import './styles/search-input.css';
+@import './styles/pokemon-list.css';
 @import './styles/footer.css';
