--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,6 @@
 
 
 /* Global */
-
 html,
 *,
 *:before,
@@ -25,60 +24,12 @@ body,
   text-decoration: none;
 }
 
-.emoji {
-  display: inline-block;
-}
-
 
 /* App structure */
-
-.pk-structure {
-  display: flex;
-  flex-direction: column;
-}
-
-.pk-structure--header {
-  height: 3.5rem;
-  flex-shrink: 0;
-  flex-grow: 0;
-
-  display: flex;
-  justify-content: center;
-
-  background-color: #b71c1c;
-}
-
-.pk-structure--body {
-  flex-shrink: 1;
-  flex-grow: 1;
-  overflow: auto;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  background-color: #f5f5f5;
-}
-
-.pk-header,
-.pk-main,
-.pk-footer {
-  width: 100%;
-  max-width: 800px;
-  flex-shrink: 0;
-  flex-basis: auto;
-}
-
-.pk-main {
-  flex-grow: 1;
-
-  display: flex;
-  flex-direction: column;
-}
+@import './styles/app-structure.css';
 
 
 /* Blocks, elements and modifiers (BEM) */
-
 @import './styles/header.css';
 @import './styles/search-input.css';
 @import './styles/pokemon-list.css';
