--- a/src/styles/pokemon-slot.css
+++ b/src/styles/pokemon-slot.css
@@ -62,6 +62,8 @@
 .pk-pokemon-picture {
   height: 100px;
   width: 100px;
+
+  color: transparent;
   border-radius: 50%;
   border: 2px solid #9E9E9E;
   background-image: linear-gradient(135deg, #e53935 0, #e53935 50%, #ffffff 50%, #ffffff 100%);
